Fixed the scroll overflow

--- a/02week/blog/css/style.css
+++ b/02week/blog/css/style.css
@@ -2,16 +2,25 @@ html{
   background-color: #f4f5f7;
 }
 
-header{
-  background-color: blue;
+.hwrapper{
   width: 100%;
   height: 20%;
+  top: 0%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  overflow: hidden;
+}
 
+header{
+  background-color: blue;
+  border-bottom: solid;
 }
 
 .wrapper{
   overflow-y: scroll;
-  top:15%;
+  top:20%;
   left: 0;
   right: 0;
   bottom: 15%;
@@ -21,6 +30,7 @@ header{
 section{
   margin: 0 25%;
   background-color: #f4f5f7;
+
 
 }
 
@@ -35,4 +45,12 @@ article{
 
 }
 
-footer{}
+footer{
+  bottom: 15px;
+  left: 0;
+  right: 0;
+  height: 15%;
+  position: absolute;
+
+
+}
